--- a/css/반응형웹/미디어쿼리.html
+++ b/css/반응형웹/미디어쿼리.html
@@ -23,14 +23,41 @@ background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 
       right:  top:;
       */
       position: fixed;
-      right: 50px; top:50px;
+      left: 50px; top:50px;
       background-color: #fff;
       border: 1px solid #000;
       border-radius: 0.5em;
       padding: 0.5em;
+      z-index: 100;
     }
     .media-txt::before{
-      content: "pc";
+      content: "wide desk";
+    }
+    @media (max-width:1199.98px){
+      .media-txt::before{
+      content: "desk";
+    }
+    }
+    @media (max-width:1023.98px){
+        .media-txt::before{
+      content: "tablet";
+    }
+    }
+    @media (max-width:767.98px){
+        .media-txt::before{
+      content: "mobile";
+    }
+    }
+    /* @media (max-width:576.98px){
+        .media-txt::before{
+      content: "mobile";
+    }
+    } */
+    @media (max-width:576.98px)and (orientation: portrait){
+      .media-txt{left:30px; top:20px;}  
+      .media-txt::before{
+      content: "mobile portrait";
+    }
     }
 
     /* 1. 이미지과 브라우저 가운데 위치
@@ -59,6 +86,7 @@ background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 
 
     /* 모서리 둥글게 */
     border-radius: 20px;
+    box-shadow: 0px 0px 10px 0px rgb(0,0,0,0.4);
   }
   .media-box .media-wrap{
     width: auto;
@@ -73,6 +101,33 @@ background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 
     object-position: center;
   }
 
+  /* @media (max-width:1199.98px){ */
+  @media (max-width:1199.98px){
+    .container{
+      background: #DE28C9;
+background: linear-gradient(161deg, rgba(222, 40, 201, 0.37) 0%, rgba(222, 40, 201, 1) 100%);
+    }
+  }
+
+  /* @media (max-width:767.98px){ */
+  @media (max-width:767.98px){
+    .container{
+      background:#ef6;
+    }
+    .media-box{
+      padding: 20px;
+      border-radius: 10px;
+    }
+    .media-box .media-wrap{
+      border-radius: 10px;
+    }
+  }
+
+  @media (max-width:576.98px) and (orientation: portrait){
+  .media-box .media-wrap{
+    aspect-ratio: 3/4;
+  }
+  }
   </style>
 </head>
 <body>
