--- a/css/flex layout/flex7-오버레이 아래에서 위로.html
+++ b/css/flex layout/flex7-오버레이 아래에서 위로.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flex7 갤러리 부모의 크기에 따라 유동적 크기(비율 유지)</title>
+    <title>flex7 - 오버레이</title>
     <style>
         *{margin:0; padding: 0; box-sizing: border-box;}
         body{
@@ -20,6 +20,7 @@
         }
         .card-wrap{
             position: relative; /*.card-item .overlay 기준요소*/
+            overflow: hidden;
         }
         .card-item{
         }
@@ -36,7 +37,39 @@
             position: absolute;
             left:0; top:0;
             width: 100%; /*기준요소의 너비의 콘텐츠 영역을 가져와요*/
+            height:100%;
+            background-color: rgba(0,0,255,0.5);
+            color:#fff;
         }
+        .card-item .overlay > p{
+          padding: 0.2em 0.5em;
+        }
+        /* 오버레이 아이템 정렬 */
+        .card-item .overlay{
+          /* 위치 잡기 */
+          position: absolute;
+          left:0; top:0;
+
+          /* 기준 요소 밖으로 배치
+          자기 원래 위치에서 ㅗㄴ인의 수평크기만큼 ##아래로## 움직임*/
+          transform: translateY(100%);
+          transition: all 0.2s;
+          /* 기준요소의 너비 높이를 다르게 할 때 */
+          width: 100%; /*기준요소의 너비의 콘텐츠 영역을 가져와요*/
+          height:100%;
+          /* .overlay 자식요소들의 정렬위해서 */
+          display:flex;
+          flex-direction:column;
+          justify-content: center;
+          align-items:center;
+          /* overlay요소 안에 후손 inline 들의 정렬 */
+          text-align: center;
+        }
+
+          .card-wrap:hover .card-item .overlay{
+            transform: translateY(0);
+            transition: all o.4s;
+          }
         /* flex */
         /* flex container   => .card-list */
         .card-list{
@@ -107,7 +140,7 @@
                     <div class="thubm"><img src="https://picsum.photos/400/300?random=1" alt=""></div>
                     <div class="overlay">
                         <p class="title">포트폴리어 제목</p>
-                        <p class="desc">lorem6</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
             </div>
@@ -116,7 +149,7 @@
                     <div class="thubm"><img src="https://picsum.photos/400/300?random=2" alt=""></div>
                     <div class="overlay">
                         <p class="title">포트폴리어 제목</p>
-                        <p class="desc">lorem6</p>
+                        <p class="desc">Lorem, ipsum dolor.</p>
                     </div>
                 </div>
             </div>
@@ -125,7 +158,7 @@
                     <div class="thubm"><img src="https://picsum.photos/400/300?random=3" alt=""></div>
                     <div class="overlay">
                         <p class="title">포트폴리어 제목</p>
-                        <p class="desc">lorem6</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
             </div>
@@ -134,7 +167,7 @@
                     <div class="thubm"><img src="https://picsum.photos/400/300?random=4" alt=""></div>
                     <div class="overlay">
                         <p class="title">포트폴리어 제목</p>
-                        <p class="desc">lorem6</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
             </div>
@@ -143,7 +176,7 @@
                     <div class="thubm"><img src="https://picsum.photos/400/300?random=5" alt=""></div>
                     <div class="overlay">
                         <p class="title">포트폴리어 제목</p>
-                        <p class="desc">lorem6</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
             </div>
@@ -152,7 +185,7 @@
                     <div class="thubm"><img src="https://picsum.photos/400/300?random=6" alt=""></div>
                     <div class="overlay">
                         <p class="title">포트폴리어 제목</p>
-                        <p class="desc">lorem6</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
             </div>
@@ -161,7 +194,7 @@
                     <div class="thubm"><img src="https://picsum.photos/400/300?random=7" alt=""></div>
                     <div class="overlay">
                         <p class="title">포트폴리어 제목</p>
-                        <p class="desc">lorem6</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
             </div>
@@ -170,7 +203,7 @@
                     <div class="thubm"><img src="https://picsum.photos/400/300?random=8" alt=""></div>
                     <div class="overlay">
                         <p class="title">포트폴리어 제목</p>
-                        <p class="desc">lorem6</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
             </div>
@@ -179,7 +212,7 @@
                     <div class="thubm"><img src="https://picsum.photos/400/300?random=9" alt=""></div>
                     <div class="overlay">
                         <p class="title">포트폴리어 제목</p>
-                        <p class="desc">lorem6</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
             </div>
@@ -188,7 +221,7 @@
                     <div class="thubm"><img src="https://picsum.photos/400/300?random=10" alt=""></div>
                     <div class="overlay">
                         <p class="title">포트폴리어 제목</p>
-                        <p class="desc">lorem6</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
             </div>
@@ -197,7 +230,7 @@
                     <div class="thubm"><img src="https://picsum.photos/400/300?random=11" alt=""></div>
                     <div class="overlay">
                         <p class="title">포트폴리어 제목</p>
-                        <p class="desc">lorem6</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
             </div>
@@ -206,7 +239,7 @@
                     <div class="thubm"><img src="https://picsum.photos/400/300?random=12" alt=""></div>
                     <div class="overlay">
                         <p class="title">포트폴리어 제목</p>
-                        <p class="desc">lorem6</p>
+                        <p class="desc">Lorem ipsum dolor sit amet consectetur.</p>
                     </div>
                 </div>
             </div>
